--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -43,8 +43,10 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">                                                
                   <mat-form-field class="input-full-width">    
-                    <input matInput type="text" (input)="checkReferencia()" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
+                    <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
+                    <!-- <input matInput type="text" (input)="checkReferencia()" formControlName="referenciaCtrl" placeholder="Referencia"/>                       -->
                   </mat-form-field>                 
+                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary">Checar referencia</button>            
                 </div>
               </div>          
             </div>
@@ -67,7 +69,7 @@
             <div class="row mb-3">            
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre"/>
+                    <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre del tramitador"/>
                     <mat-error *ngIf="secondFormGroup.get('nombreCtrl').errors?.required">
                       Este campo es obligatorio
                     </mat-error>  
@@ -157,7 +159,7 @@
 
               <div class="row mb-3">            
                 <div class="col-lg-4">                                             
-                  <mat-slide-toggle formControlName="etiquetadoCtrl">Etiquetado</mat-slide-toggle>                  
+                  <mat-slide-toggle formControlName="etiquetadoCtrl" color="primary">Etiquetado</mat-slide-toggle>                  
                 </div>                                        
               </div>            
 
@@ -234,7 +236,7 @@
                   <div class="col-12 col-md-12">                    
                     <div class="row mb-1">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Guia Master </h5>
+                        <h5 class="detail-text text-muted">Guía Master </h5>
                         <p class="detail-text">{{model.Master}}</p>
                       </div>
                       
@@ -250,7 +252,7 @@
                 
                     <div class="row mb-1">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Guia House</h5>
+                        <h5 class="detail-text text-muted">Guía House</h5>
                         <p class="detail-text">{{model.House}}</p>
                       </div>
 
@@ -272,21 +274,20 @@
                       
                       </div>
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Piezas </h5>
+                        <h5 class="detail-text text-muted">Piezas</h5>
                         <p class="detail-text">{{model.Piezas}}</p>
                       </div>
                       
                       <div class="col-md-4">
                         <h5 class="detail-text text-muted">Peso</h5>
-                        <p class="detail-text">{{model.Peso}}</p>
+                        <p class="detail-text">{{model.Peso}} Kg</p>
                       </div>
                     </div>
                 
                     <div class="row mb-3">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Fecha y Hora</h5> 
-                        <p class="detail-text">{{model.FechaPrevio}}</p>
-                      
+                        <h5 class="detail-text text-muted">Fecha y hora</h5> 
+                        <p class="detail-text">{{model.FechaPrevio?.slice(0,4)}}/{{model.FechaPrevio?.slice(4,6)}}/{{model.FechaPrevio?.slice(6,9)}} {{model.FechaPrevio?.slice(9,14)}}</p>                        
                       </div>
                       <div class="col-md-4">
                         <h5 class="detail-text text-muted">Etiquetado</h5>
@@ -329,7 +330,7 @@
           {{responseMessage}}
         </div>
         <div class="col-12 text-center mt-5 ">
-          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Ok</button>  
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Aceptar</button>  
         </div>
       </div>        
     </div>
