--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -2,7 +2,7 @@
 <ngx-loading [show]="loading"></ngx-loading>      
 <div class="row justify-content-end">  
   <div class="col-lg-12 text-right">
-    <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>    
+    <button (click)="openDialog()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>    
   </div>          
 </div>
 
@@ -16,13 +16,13 @@
           <div class="row">
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.Master" placeholder="Guia Master"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.Master" placeholder="Guía Master"/>
               </mat-form-field>
             </div>
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.House" placeholder="Guia House"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.House" placeholder="Guía House"/>
               </mat-form-field>
             </div>
 
@@ -60,7 +60,7 @@
                   </mat-option>
                   <mat-option>Ninguno</mat-option>                    
                   <mat-option *ngFor="let option of instruccionesManejoCatalogo | filterSelect: instruccionesManejoSearch" [value]="option.ClaveInstruccion"> 
-                    {{option.ClaveInstruccion}} - {{option.Descripcion}}
+                    {{option.Descripcion}}
                   </mat-option>
                 </mat-select>                  
               </mat-form-field>
@@ -76,12 +76,12 @@
         </div>
 
         <div class="col-lg-3">
-          <div class="row justify-content-start">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-              <button (click)="buscarPrealertas()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+          <div class="row justify-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1 pr-0 align-self-end">
+              <button (click)="buscarPrealertas()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-              <button (click)="buscaPrealertasNueva()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1 pl-0 align-self-start">              
+              <button (click)="buscaPrealertasNueva()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
             </div>
           </div>
         </div>    
@@ -95,15 +95,6 @@
             <div class="row align-items-center">
 
               <div class="col mb-1 text-center status-filter">            
-                <div class="status-filter__circle status-filter__circle--Aceptada"></div>
-                  <div class="status-filter__text">
-                    <label (click)="applyFilter(0)">
-                      <span class="status-filter__number">({{ countStatus.Aceptada }})</span> Aceptada
-                    </label>
-                  </div>
-              </div> 
-              
-              <div class="col mb-1 text-center status-filter">            
                 <div class="status-filter__circle status-filter__circle--Solicitada"></div>
                   <div class="status-filter__text">
                     <label (click)="applyFilter(1)">
@@ -113,10 +104,10 @@
               </div>
 
               <div class="col mb-1 text-center status-filter">            
-                <div class="status-filter__circle status-filter__circle--PendienteAAACESA"></div>
+                <div class="status-filter__circle status-filter__circle--Rechazada"></div>
                   <div class="status-filter__text">
-                    <label (click)="applyFilter(2)">
-                      <span class="status-filter__number">({{ countStatus.PendienteAAACESA }})</span> P.AAACESA
+                    <label (click)="applyFilter(4)">
+                      <span class="status-filter__number">({{ countStatus.Rechazada }})</span> Rechazada
                     </label>
                   </div>
               </div>
@@ -128,16 +119,25 @@
                       <span class="status-filter__number">({{ countStatus.PendienteCliente }})</span> P.Cliente
                     </label>
                   </div>
-              </div>
-              
+              </div>                                    
+
               <div class="col mb-1 text-center status-filter">            
-                <div class="status-filter__circle status-filter__circle--Rechazada"></div>
+                <div class="status-filter__circle status-filter__circle--PendienteAAACESA"></div>
                   <div class="status-filter__text">
-                    <label (click)="applyFilter(4)">
-                      <span class="status-filter__number">({{ countStatus.Rechazada }})</span> Rechazada
+                    <label (click)="applyFilter(2)">
+                      <span class="status-filter__number">({{ countStatus.PendienteAAACESA }})</span> P.AAACESA
                     </label>
                   </div>
-              </div>
+              </div>      
+              
+              <div class="col mb-1 text-center status-filter">            
+                <div class="status-filter__circle status-filter__circle--Aceptada"></div>
+                  <div class="status-filter__text">
+                    <label (click)="applyFilter(0)">
+                      <span class="status-filter__number">({{ countStatus.Aceptada }})</span> Aceptada
+                    </label>
+                  </div>
+              </div>  
 
               <div class="col mb-1 text-center status-filter">            
                 <div class="status-filter__circle status-filter__circle--Finalizada"></div>
@@ -267,17 +267,17 @@
                             </div> -->
 
                             <div class="col-12">
-                              <h5 class="detail-text text-muted">Guia Master </h5>
+                              <h5 class="detail-text text-muted">Guía Master </h5>
                               <p class="detail-text">{{detailData.GuiaMaster}}</p>
                             </div>
 
                             <div class="col-12">
-                              <h5 class="detail-text text-muted">Guia House </h5>
+                              <h5 class="detail-text text-muted">Guía House </h5>
                               <p class="detail-text">{{detailData.GuiaHouse}}</p>
                             </div>
 
                             <div class="col-12">
-                              <h5 class="detail-text text-muted">Consiganatario a Facturar</h5> 
+                              <h5 class="detail-text text-muted">Consignatario a Facturar</h5> 
                               <p class="detail-text">{{detailData.Consignatario}}</p>
                             </div>
 
@@ -287,7 +287,7 @@
                             </div>
 
                             <div class="col">
-                              <h5 class="detail-text text-muted">Condicion de Alamacenaje</h5>
+                              <h5 class="detail-text text-muted">Condición de Alamacenaje</h5>
                               <p class="detail-text">{{detailData.CondicionAlmacenaje}}</p>
                             </div>                                                      
                           </div>  
@@ -321,7 +321,7 @@
 
                               <div class="col-xs-12 col-sm-12 col-lg-2">
                                 <h5 class="detail-text text-muted">Peso</h5>
-                                <p class="detail-text">{{detailData.Peso}}</p>
+                                <p class="detail-text">{{detailData.Peso}} Kg</p>
                               </div>
 
                               <div class="col-xs-12 col-sm-12 col-lg-8">
@@ -340,7 +340,7 @@
                                 <p class="detail-text">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
                               </div>
                               <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <h5 class="detail-text text-muted">Almacen de Origen</h5>
+                                <h5 class="detail-text text-muted">Almacén de Origen</h5>
                                 <p class="detail-text">{{detailData.AlmacenOrigen}}</p>
                               </div>
                             </div>
@@ -448,7 +448,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12 mb-3">
                             <div class="row justify-content-end">
                               <div *ngFor="let estado of detailData.EstatusDisponibles" class="col-lg mb-2 text-right">
-                                <button (click)="updateSeguimiento(estado)" class="btn btn-pill btn-primary">{{estado.split(' ')[0]}}</button>
+                                <button (click)="updateSeguimiento(estado)" class="btn btn-pill btn-primary btn-sm">{{estado | seguimientoAccionesPipe}}</button>
                               </div>
                             </div>                                
                           </div>
