--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -25,7 +25,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">                
                   <mat-form-field class="input-full-width">         
-                    <input matInput type="text" (input)="cleanReferencia()" formControlName="masterCtrl" placeholder="Guía Master"/> 
+                    <input matInput type="text" (input)="cleanReferencia()" formControlName="masterCtrl" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/> 
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
                       Este campo es obligatorio
                     </mat-error>
@@ -66,79 +66,8 @@
               
         <div class="container mt-3">
           <form [formGroup]="secondFormGroup">
-            <div class="row mb-3">            
-                <div class="col-lg-4">
-                  <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre del tramitador"/>
-                    <mat-error *ngIf="secondFormGroup.get('nombreCtrl').errors?.required">
-                      Este campo es obligatorio
-                    </mat-error>  
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-4">
-                  <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="paternoCtrl" placeholder="Apellido Paterno"/>
-                    <mat-error *ngIf="secondFormGroup.get('paternoCtrl').errors?.required">
-                      Este campo es obligatorio
-                    </mat-error>  
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-4">
-                  <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="maternoCtrl" placeholder="Apellido Materno"/>
-                    <mat-error *ngIf="secondFormGroup.get('maternoCtrl').errors?.required">
-                      Este campo es obligatorio
-                    </mat-error> 
-                  </mat-form-field>
-                </div>              
-              </div>
-
-              <div class="row mb-3">            
-                  <div class="col-lg-4">
-                    <mat-form-field class="input-full-width">
-                      <input matInput type="text" formControlName="patenteCtrl" placeholder="Patente"/>
-                      <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.required">
-                        Este campo es obligatorio
-                      </mat-error> 
-                      <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.pattern">
-                        Debe ser un numero
-                      </mat-error> 
-                    </mat-form-field>
-                  </div>
-                  <div class="col-lg-4">
-                    <mat-form-field class="input-full-width">
-                      <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker placeholder="Fecha">
-                      <mat-error *ngIf="secondFormGroup.get('fechaPrevioCtrl').errors?.required">
-                        Este campo es obligatorio
-                      </mat-error> 
-                    </mat-form-field>                                              
-                  </div>
-
-                  <div class="col-lg-4">                    
-                    <mat-form-field style="width: 49%;" >
-                      <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
-                    </mat-form-field>
-                    <strong style="font-size:1rem;">:</strong>
-                    <mat-form-field style="width: 49%;">
-                      <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
-                    </mat-form-field>
-                  </div>
-
-              </div>
-
-              <div class="row mb-3">   
-                <div class="col-lg-4">
-                  <mat-form-field class="input-full-width">
-                    <input matInput type="text" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
-                    <mat-error *ngIf="secondFormGroup.get('numGafeteCtrl').errors?.required">
-                      Este campo es obligatorio
-                    </mat-error> 
-                    <mat-error *ngIf="secondFormGroup.get('numGafeteCtrl').errors?.pattern">
-                      Debe ser un numero
-                    </mat-error> 
-                  </mat-form-field>
-                </div>    
-
+        
+              <div class="row mb-3">                     
                 <div class="col-lg-4">  
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
@@ -154,22 +83,34 @@
                       Debe ser un numero
                     </mat-error> 
                   </mat-form-field>
-                </div>                           
-              </div>
+                </div>    
 
-              <div class="row mb-3">            
                 <div class="col-lg-4">                                             
                   <mat-slide-toggle formControlName="etiquetadoCtrl" color="primary">Etiquetado</mat-slide-toggle>                  
-                </div>                                        
-              </div>            
-
-              <div class="row mb-3">
-                <div class="col-lg-12">
-                  <mat-form-field class="input-full-width">
-                    <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
-                  </mat-form-field>
-                </div>            
+                </div>                                   
               </div>
+
+              <div class="row mb-3">                 
+                <div class="col-lg-6">
+                  <mat-form-field class="input-full-width">
+                    <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker placeholder="Fecha">
+                    <mat-error *ngIf="secondFormGroup.get('fechaPrevioCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error> 
+                  </mat-form-field>                                              
+                </div>
+
+                <div class="col-lg-6">                    
+                  <mat-form-field style="width: 49%;" >
+                    <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
+                  </mat-form-field>
+                  <strong style="font-size:1rem;">:</strong>
+                  <mat-form-field style="width: 49%;">
+                    <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
+                  </mat-form-field>
+                </div>                                       
+              </div>
+              
             </form>
 
             <div class="row mt-5">
@@ -180,6 +121,83 @@
             </div>
         </div>
                 
+    </mat-step>
+
+    <mat-step [stepControl]="thirdFormGroup">
+
+      <div class="container mt-3">
+        <form [formGroup]="thirdFormGroup">
+          
+          <div class="row mb-3">     
+            <div class="col-lg-6">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
+                <mat-error *ngIf="thirdFormGroup.get('numGafeteCtrl').errors?.required">
+                  Este campo es obligatorio
+                </mat-error> 
+                <mat-error *ngIf="thirdFormGroup.get('numGafeteCtrl').errors?.pattern">
+                  Debe ser un numero
+                </mat-error> 
+              </mat-form-field>
+            </div>  
+            
+            <div class="col-lg-6">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" formControlName="patenteCtrl" placeholder="Patente"/>
+                <mat-error *ngIf="thirdFormGroup.get('patenteCtrl').errors?.required">
+                  Este campo es obligatorio
+                </mat-error> 
+                <mat-error *ngIf="thirdFormGroup.get('patenteCtrl').errors?.pattern">
+                  Debe ser un numero
+                </mat-error> 
+              </mat-form-field>
+            </div>                               
+          </div>  
+
+          <div class="row mb-3">            
+              <div class="col-lg-4">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre del tramitador"/>
+                  <mat-error *ngIf="thirdFormGroup.get('nombreCtrl').errors?.required">
+                    Este campo es obligatorio
+                  </mat-error>  
+                </mat-form-field>
+              </div>
+              <div class="col-lg-4">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" formControlName="paternoCtrl" placeholder="Apellido Paterno"/>
+                  <mat-error *ngIf="thirdFormGroup.get('paternoCtrl').errors?.required">
+                    Este campo es obligatorio
+                  </mat-error>  
+                </mat-form-field>
+              </div>
+              <div class="col-lg-4">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" formControlName="maternoCtrl" placeholder="Apellido Materno"/>
+                  <mat-error *ngIf="thirdFormGroup.get('maternoCtrl').errors?.required">
+                    Este campo es obligatorio
+                  </mat-error> 
+                </mat-form-field>
+              </div>              
+            </div>          
+
+            <div class="row mb-3">
+              <div class="col-lg-12">
+                <mat-form-field class="input-full-width">
+                  <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
+                </mat-form-field>
+              </div>            
+            </div>
+          </form>
+
+          <div class="row mt-5">
+            <div class="col-lg-12 text-center">
+              <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
+              <button (click)="validarCampos(2)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            </div>
+          </div>
+      </div>
+
     </mat-step>
 
     <mat-step [completed]="model.Documentos?.length >= 1" >      
