--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -15,7 +15,7 @@
           <div class="row">
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">                
-                <input matInput type="text" class="" [(ngModel)]="busquedaModel.Master" placeholder="Guía Master"/>
+                <input matInput type="text" class="" [(ngModel)]="busquedaModel.Master" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/>
               </mat-form-field>                
             </div>
             <div class="col-lg-3 mb-1">
